force-app/main/default/objects/Embryos__c/fields/Static_Fate__c.field-meta.xml
<CustomField>
    <fullName>Static_Fate__c</fullName>
    <formula>IF( TEXT(Fate__c) = &quot;Transferred&quot; &amp;&amp;  Cycle_Transferred_In__r.Id  &lt;&gt;   Cycle_Created_In__r.Id  &amp;&amp;  ISBLANK(TEXT(Post_Thaw_Survival__c) )=TRUE, &quot;Frozen&quot;, TEXT(Fate__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Static Fate</label>
    <type>Text</type>
</CustomField>