force-app/main/default/objects/Embryos__c/fields/Storage_Location__c.field-meta.xml
<CustomField>
    <fullName>Storage_Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Storage Location</label>
    <referenceTo>Storage_Location__c</referenceTo>
    <relationshipLabel>Embryos</relationshipLabel>
    <relationshipName>Embryos</relationshipName>
    <type>Lookup</type>
</CustomField>