force-app/main/default/objects/Embryos__c/fields/Survivability__c.field-meta.xml
<CustomField>
    <fullName>Survivability__c</fullName>
    <label>Survivability</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>