force-app/main/default/objects/Embryos__c/fields/System_Updated__c.field-meta.xml
<CustomField>
    <fullName>System_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Updated Checkbox</label>
    <type>Checkbox</type>
</CustomField>