force-app/main/default/objects/Embryos__c/fields/Thaw_Date__c.field-meta.xml
<CustomField>
    <fullName>Thaw_Date__c</fullName>
    <label>Thaw Date</label>
    <type>Date</type>
</CustomField>