force-app/main/default/objects/Embryos__c/fields/Transfer_Doctor__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Embryos</relationshipLabel>
    <relationshipName>Embryos</relationshipName>
    <type>Lookup</type>
</CustomField>