force-app/main/default/objects/Embryos__c/fields/Transfer_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Embryos5</relationshipName>
    <type>Lookup</type>
</CustomField>